# LocalChat

./: .gitignore  CODE_OF_CONDUCT.md  Cargo.toml  DESIGN.md  README.md
.github/workflows/: build.yml
app/: .gitignore  Cargo.toml
app/scripts/: _load-config.ps1  config.ps1  install-lego.ps1  install-renewal-task.ps1  issue-cert.ps1  renew-cert.ps1  run-localchat.ps1
app/src/: admin.rs  applog.rs  channel.rs  config.rs  db.rs  http.rs  main.rs  message.rs  net.rs  persist.rs  state.rs  tray.rs  user.rs  ws.rs
app/web/: admin.html  admin.js  app.js  index.html  style.css
scripts/: README.md
src/: admin.rs  applog.rs  channel.rs  config.rs  http.rs  main.rs  metrics.rs  net.rs  persist.rs  state.rs  tray.rs  user.rs  ws.rs
web/: admin.html  admin.js  app.js  index.html  style.css
